<resources>
    <string name="app_name">KotlinMaster</string>

    <string name="logo_wholesale">Wholesale</string>
    <string name="title_wholesale">Find your car parts</string>
    <string name="label_car_brand">Car Brand</string>
    <string name="label_car_model">Car Model</string>
    <string name="label_engine_type">Engine Type</string>
    <string name="label_price">Price</string>
    <string name="hint_car_brand">Select a brand</string>
    <string name="hint_car_model">Select a model</string>
    <string name="hint_engine_type">Select an engine</string>

    <string name="label_login">LOGIN</string>
    <string name="label_register">REGISTER</string>
    <string name="label_forgot_password">FORGOT PASSWORD</string>
    <string name="label_personal_information">PERSONAL INFORMATION</string>
    <string name="label_address_telephone">ADDRESS TELEPHONE</string>
    <string name="label_email_address">E-mail address</string>
    <string name="label_password">Password</string>
    <string name="label_back_to_login">Back to Login</string>
    <string name="label_salutation">Salutation</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_company_name">Company name</string>
    <string name="label_full_address">Full address</string>
    <string name="label_postal_code">Postal Code</string>
    <string name="label_city">City</string>
    <string name="label_country">Country</string>
    <string name="label_company_biz_licence_number">Company biz license no.</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_referral_id">Referral id</string>
    <string name="label_forgot">Forgot?</string>
    <string name="label_select_brand">Select Brand</string>
    <string name="label_select_model">Select Model</string>
    <string name="label_select_engine">Select Engine</string>
    <string name="label_select_country">Select Country</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">Delete</string>
    <string name="label_save">Save</string>
    <string name="label_cancel_order">Cancel Order</string>
    <string name="label_add_new">Add New</string>
    <string name="label_telephone">Tel:</string>
    <string name="label_fax">Fax:</string>
    <string name="label_email">Email:</string>
    <string name="label_bolk">Bolk - Ref: </string>
    <string name="label_grade">Grade: </string>
    <string name="label_shipping_fees">Shipping fees:</string>
    <string name="label_buy_now">Buy now</string>
    <string name="label_add_to_basket">add to basket</string>
    <string name="label_use_this_address">Use this address</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_current_password">Current password</string>
    <string name="label_new_password">New password</string>
    <string name="label_confirm_new_password">Confirm new password</string>
    <string name="label_edit">Edit</string>
    <string name="label_track_order">Track Order</string>
    <string name="label_quantity">QTY:</string>
    <string name="label_order">Order:</string>
    <string name="label_order_confirmed">Order Confirmed</string>
    <string name="label_ready_to_ship">Ready to Ship</string>
    <string name="label_in_transit">In Transit</string>
    <string name="label_arrived">Delivered</string>
    <string name="label_collected">Collected</string>
    <string name="label_radio_popularity">Popularity</string>
    <string name="label_radio_new_first">Newest first</string>
    <string name="label_radio_low_to_high">Price low to high</string>
    <string name="label_radio_high_to_low">Price high to low</string>
    <string name="label_check_out">Check out</string>
    <string name="label_my_basket">My Basket</string>
    <string name="label_shipping_payment">Shipping &amp; Payment</string>
    <string name="label_add_new_address">Add New Address</string>
    <string name="label_order_detail">Order Detail</string>
    <string name="label_tracking_information">Tracking Information</string>
    <string name="label_tracking_code">Tracking Code</string>
    <string name="label_add_photo">Add Photo</string>
    <string name="label_capture_image">Capture Photo</string>
    <string name="label_choose_image">Choose Photo</string>
    <string name="label_select_file">Select File</string>
    <string name="label_remove_image">Remove Photo</string>
    <string name="label_no">No</string>
    <string name="label_bitmap_data">data</string>
    <string name="label_image_type">.jpeg</string>
    <string name="label_sdcard_file_name">/WholeSaleApp</string>
    <string name="label_total_amount">Total amount:</string>
    <string name="label_select">Select</string>
    <string name="label_add_quantity">Add Quantity</string>
    <string name="label_ok">OK</string>
    <string name="label_order_status">Order Status: </string>
    <string name="label_acon">Acon -</string>
    <string name="label_manufacture_reference">Manufacture references (OEM numbers)</string>
    <string name="label_order_placed_successfully">Order has been placed successfully.</string>
    <string name="label_brace_start">(</string>
    <string name="label_brace_end">)</string>
    <string name="label_off">% off</string>

    <string name="hint_fax">Fax</string>
    <string name="hint_email_address">enter email address</string>
    <string name="hint_password">enter password</string>
    <string name="hint_select_civility">select civility</string>
    <string name="hint_first_name">enter your first name</string>
    <string name="hint_enter_last_name">enter your last name</string>
    <string name="hint_company_name">enter company name</string>
    <string name="hint_license_number">enter license no.</string>
    <string name="hint_address_line1">address line 1</string>
    <string name="hint_address_line2">address line 2</string>
    <string name="hint_postal_code">enter postal code</string>
    <string name="hint_city_name">city name</string>
    <string name="hint_country">select your country</string>
    <string name="hint_phone_number">enter contact number</string>
    <string name="hint_referral_id">enter referral id</string>

    <string name="label_address_book">Address Book</string>
    <string name="label_edit_address">Edit Address</string>
    <string name="label_credit">Credit:</string>
    <string name="label_my_orders">My orders</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_about_us">About us</string>
    <string name="label_contact_us">Contact us</string>
    <string name="label_terms">Terms &amp; conditions</string>
    <string name="label_logout">Logout</string>

    <string name="dummy_about_us_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="label_filter">Filter</string>
    <string name="label_sort">Sort by</string>
    <string name="label_pay_and_order">PAY &amp; ORDER</string>
    <string name="lable_billing_address">Billing Address</string>
    <string name="label_shipping_address">Shipping Address</string>
    <string name="label_qty">QTY:</string>
    <string name="label_unit_price">Unit Price</string>
    <string name="label_subtotal">Subtotal:</string>
    <string name="label_grand_total">Grand Total:</string>
    <string name="label_excluding_vat">(Excluding VAT)</string>
    <string name="label_vat">VAT</string>
    <string name="label_shipping_fee">Shipping Fees</string>
    <string name="label_current_credit">Current Credit</string>
    <string name="label_amount">Amount</string>
    <string name="label_remaining_credit">Remaining credit after purchase:</string>
    <string name="label_products">Products</string>
    <string name="label_date">Date :</string>
    <string name="label_in_basket">in your basket</string>
    <string name="label_item">item</string>
    <string name="label_items">items</string>
    <string name="label_delivery_address">Delivery Address</string>

    <string name="value_credit">$%1s</string>
    <string name="value_price">$%1s</string>

    <string name="label_tel">Tel: %1s</string>
    <string name="label_fax2">Fax: %1s</string>
    <string name="label_email2">Email: %1s</string>
    <string name="label_and">and</string>

    <!--Alert messages-->
    <string name="alert_internet">Please check your internet connection</string>
    <string name="alert_enter_email">Please enter email address</string>
    <string name="alert_email">Please add proper email address</string>
    <string name="alert_password">Please enter the password</string>
    <string name="alert_something_wrong">Something went wrong. Please try again later.</string>
    <string name="alert_first_name">Please enter first name</string>
    <string name="alert_company_name">Please enter company name</string>
    <string name="alert_company_licence">Please enter company licence number</string>
    <string name="alert_address">Please enter address</string>
    <string name="alert_city">Please enter city</string>
    <string name="alert_country">Please select country</string>
    <string name="alert_postal_code">Please enter postal code</string>
    <string name="alert_phone">Please enter phone number</string>
    <string name="alert_valid_phone">Please enter valid phone number</string>
    <string name="alert_referral">Please enter referral id</string>
    <string name="alert_civility">Please select civility</string>
    <string name="alert_permission">Permission is necessary to proceed further</string>
    <string name="alert_current_password">Please enter current password</string>
    <string name="alert_new_password">Please enter a new password</string>
    <string name="alert_confirm_new_password">Please confirm your new password</string>
    <string name="alert_new_confirm_password_dont_match">Please enter the same password as above</string>
    <string name="alert_change_password_success">Password changed successfully</string>
    <string name="alert_select_brand">Please select car brand</string>
    <string name="alert_select_model">Please select car model</string>
    <string name="alert_select_engine">Please select engine type</string>
    <string name="alert_credit_balance">You do not have enough credit balance to purchase</string>
    <string name="alert_select_address">Please select a delivery address</string>
    <string name="alert_add_address">Please select an address</string>
    <string name="alert_enter_quantity">Please add quantity between</string>

    <string name="label_mr">Mr.</string>
    <string name="label_mrs">Mrs.</string>
    <string name="label_miss">Miss</string>
    <string name="label_no_data_available">No data available</string>
    <string name="label_tap_here_to_refresh">Tap here to refresh</string>

</resources>
