<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCommonBg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <include layout="@layout/toolbar_home" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/fragment_search_tvBrand"
        style="@style/StyleTextViewLabelSearchType"
        android:text="@string/label_car_brand" />


    <animation.indianic.com.kotlinmaster.customcomponents.CustomDropdownButton
        android:id="@+id/fragment_search_bvCarBrand"
        style="@style/StyleTextViewSearchBtnDropdown"
        app:button_hint="@string/hint_car_brand" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/fragment_search_tvModel"
        style="@style/StyleTextViewLabelSearchType"
        android:text="@string/label_car_model" />

    <animation.indianic.com.kotlinmaster.customcomponents.CustomDropdownButton
        android:id="@+id/fragment_search_bvCarModel"
        style="@style/StyleTextViewSearchBtnDropdown"
        app:button_hint="@string/hint_car_model" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/fragment_search_tvEngine"
        style="@style/StyleTextViewLabelSearchType"
        android:text="@string/label_engine_type" />

    <animation.indianic.com.kotlinmaster.customcomponents.CustomDropdownButton
        android:id="@+id/fragment_search_bvEngineType"
        style="@style/StyleTextViewSearchBtnDropdown"
        app:button_hint="@string/hint_engine_type" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/fragment_search_tvPrice"
        style="@style/StyleTextViewLabelSearchType"
        android:text="@string/label_price" />

    <!--<com.autopartselling.wholesale.customcomponents.RangeSeekBar-->
    <!--android:id="@+id/fragment_search_sbPrice"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="@dimen/dimen_25dp"-->
    <!--android:layout_marginStart="@dimen/dimen_25dp"-->
    <!--app:bar_color="@color/colorPrimaryDark"-->
    <!--app:bar_highlight_color="@android:color/white"-->
    <!--app:corner_radius="10"-->
    <!--app:data_type="_integer"-->
    <!--app:left_thumb_color="@color/colorButtonDropdownTwo"-->
    <!--app:left_thumb_color_pressed="@color/colorButtonDropdownTwo"-->
    <!--app:max_value="0"-->
    <!--app:min_value="0"-->
    <!--app:right_thumb_color="@color/colorButtonDropdownTwo"-->
    <!--app:right_thumb_color_pressed="@color/colorButtonDropdownTwo"-->
    <!--app:thumb_diameter="@dimen/dimen_20dp" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fragment_search_tvPriceMin"
            style="@style/StyleTextViewLabelSearchType"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:paddingStart="0dp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fragment_search_tvPriceMax"
            style="@style/StyleTextViewLabelSearchType"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dimen_25dp"
            android:paddingStart="0dp" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/fragment_search_ibSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@null"
        android:src="@drawable/ic_btn_search" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fragment_search_bvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:background="@null"
            android:fontFamily="@font/muli"
            android:text="@string/label_cancel"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_15sp" />

    </LinearLayout>

</LinearLayout>