<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    card_view:cardCornerRadius="@dimen/dimen_2dp"
    tools:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="@dimen/dimen_5dp">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/row_address_ibSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/bg_rb_address_selector" />

        <LinearLayout
            android:id="@+id/row_address_llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/row_address_ibSelect"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_address_tvAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli"
                    android:maxLines="1"
                    android:textSize="@dimen/font_15sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_address_tvPostalCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli"
                    android:maxLines="1"
                    android:textSize="@dimen/font_15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/label_telephone"
                    android:textSize="@dimen/font_15sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_address_tvTelephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli"
                    android:maxLines="1"
                    android:textSize="@dimen/font_15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/label_fax"
                    android:textSize="@dimen/font_15sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_address_tvFax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli"
                    android:maxLines="1"
                    android:textSize="@dimen/font_15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:fontFamily="@font/muli"
                    android:text="@string/label_email"
                    android:textSize="@dimen/font_15sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_address_tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/muli"
                    android:maxLines="1"
                    android:textSize="@dimen/font_15sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/row_address_viewSeparator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_below="@+id/row_address_llAddress"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/colorHintGrey" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/row_address_tvEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row_address_viewSeparator"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/label_edit"
            android:textAllCaps="true"
            android:textSize="@dimen/font_15sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>